--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-      <h1>@book.title</h1>
+      <h1><%= @book.title %></h1>
     </div>
   </div>
 </div>
