first version of index

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -24,10 +24,14 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #BD451F;
+$primary:#BD451F;
+$primary-dark:#635A43;
+$primary-light:#9C8D68;
+
 
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #BD451F;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
