show updated to brand colours

--- a/app/assets/stylesheets/pages/_show_book.scss
+++ b/app/assets/stylesheets/pages/_show_book.scss
@@ -38,7 +38,7 @@
 .book-summary-book-info {
   flex: 1 1 auto;
   padding: 20px;
-  background-color: #81BED5;
+  // background-color: #81BED5;
 
   p {
     font-size: 14px;
