--- a/app/assets/stylesheets/pages/_show_book.scss
+++ b/app/assets/stylesheets/pages/_show_book.scss
@@ -56,3 +56,14 @@
   padding: 10px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
+
+.discussion-row {
+  border-top: 1px solid $primary;
+  padding: 10px 0;
+}
+
+.show-content {
+  h3 {
+    color: $primary;
+  }
+}
