Added homepage code

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,19 @@
 <%= render 'shared/banner' %>
 
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="add-margin-top">
+  <div class="container">
+    <div class="row">
+      <% @books.all.take(12).each do |book| %>
+      <div class="col-xs-6 col-sm-3 add-margin-top">
+        <%=  link_to book_path(book.id) do %>
+        <div class="card" style="background-image: linear-gradient(to top,  rgba(81,51,27,0.7) 25%,rgba(255,255,255,0.1) 100%), url('<%= image_url @profile_pics.sample %>');">
+          <div class="card-description-bis">
+            <p>Get it from <%=book.author%>!</p>
+          </div>
+        </div>
+        <% end %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
