small changes on navbar and root to index

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -59,6 +59,12 @@
   font-size: 14px;
   border: 2px solid #D23333;
 }
+
+.btn-navbar{
+  font-size: 14px;
+  border: 0px
+}
+
 .navbar-wagon-button:hover {
   color: white;
   background: #D23333;
