--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,12 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<% content_for :title do %>
+PowOSh
+<% end %>
+
+<%= render 'shared/banner' %>
+
+<div class="container add-margin-top text-center">
+<h2>Look who can make you happy!</h2>
+</div>
 
 <div class="add-margin-top">
   <div class="container">
