fake loan flash

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="text-center">
-    <%= link_to "Request Book!", "#", class: "btn btn-primary" %>
+    <%= link_to "Request Book!", request_book_path(@book), class: "btn btn-primary" %>
   </div>
 </div>
 
