--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -19,7 +19,15 @@
   border: white 1px solid;
 }
 
-.avatar-square-large {
+.avatar-square-md {
+  width: 100px;
+  height: 100px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+
+.avatar-square-lg {
   width: 150px;
   height: 150px;
   border-radius: 2px;
