--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -2,20 +2,53 @@
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
 
-      <h1>Your Loans</h1>
-      <% @loans.each do |loan| %>
-      <ul class="list-inline">
-        <li><%= loan.book.title %></li>
-        <li><%= loan.user.email %></li>
-        <% if loan.pending %>
-        <li>
-        <%= link_to "Approve", approve_loan_path(loan), {class: "btn btn-primary", :method => :patch} %>
-        </li>
-        <% else %>
-        <% end %>
-        <%= loan.confirmed %>
-      </ul>
-      <% end %>
+    <%= @user.id %>
+    <%= @user.email %>
+
+          <h3>Your Loans</h3>
+          <% if @loans.count == 0 %>
+          <p>You don't have any borrowed books right now!</p>
+          <% else %>
+
+          <% @loans.each do |loan| %>
+          <div class="row-bordered-top list-row-library">
+
+            <div class="col-xs-6 col-md-2">
+              <div class="flex-container-centered-vh list-row-130">
+                <% profile_image_path = (User::PROFILES_PICS).sample %>
+                <div class="loan-requester avatar-square-md", style="background-image: url(<%= image_path profile_image_path %>);">
+                  <div class="profile-image-overlay text-center">
+                    <%= loan.book.user.email %>'s book
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-xs-6 col-md-6">
+              <div class="flex-container-centered-v list-row-130">
+                <div>
+                  <strong><%= loan.book.title %></strong>
+                  <em><%= loan.book.author %></em>
+
+                  <div class="padded-top-2em">
+                    Requested on <%= loan.approved_on.strftime('%d/%m/%Y') %>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xs-12 col-md-4">
+              <div class="flex-container-centered-vh list-row-130">
+                <%= link_to "Return", "#", {class: "btn btn-primary btn-half-width", :method => :patch} %>
+              </div>
+            </div>
+
+          </div>
+          <% end %>
+
+          <% end %>
+
 
     </div>
   </div>
