views for pending items and borrowed items. can request and approve loan and have ownership change

--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -1,55 +1,57 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+<div id="library-page">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
 
-    <%= @user.id %>
-    <%= @user.email %>
+        <%= @user.id %>
+        <%= @user.email %>
 
-          <h3>Your Loans</h3>
-          <% if @loans.count == 0 %>
-          <p>You don't have any borrowed books right now!</p>
-          <% else %>
+        <h3>Your Loans</h3>
+        <% if @loans.count == 0 %>
+        <p>You don't have any borrowed books right now!</p>
+        <% else %>
 
-          <% @loans.each do |loan| %>
-          <div class="row-bordered-top list-row-library">
+        <% @loans.each do |loan| %>
+        <div class="row-bordered-top list-row-library">
 
-            <div class="col-xs-6 col-md-2">
-              <div class="flex-container-centered-vh list-row-130">
-                <% profile_image_path = (User::PROFILES_PICS).sample %>
-                <div class="loan-requester avatar-square-md", style="background-image: url(<%= image_path profile_image_path %>);">
-                  <div class="profile-image-overlay text-center">
-                    <%= loan.book.user.email %>'s book
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-xs-6 col-md-6">
-              <div class="flex-container-centered-v list-row-130">
-                <div>
-                  <strong><%= loan.book.title %></strong>
-                  <em><%= loan.book.author %></em>
-
-                  <div class="padded-top-2em">
-                    Requested on <%= loan.approved_on.strftime('%d/%m/%Y') %>
-                  </div>
+          <div class="col-xs-6 col-md-2">
+            <div class="flex-container-centered-vh list-row-130">
+              <% profile_image_path = (User::PROFILES_PICS).sample %>
+              <div class="loan-requester avatar-square-md", style="background-image: url(<%= image_path profile_image_path %>);">
+                <div class="profile-image-overlay text-center">
+                  <%= loan.book.user.email %>'s book
                 </div>
               </div>
-            </div>
 
-            <div class="col-xs-12 col-md-4">
-              <div class="flex-container-centered-vh list-row-130">
-                <%= link_to "Return", "#", {class: "btn btn-primary btn-half-width", :method => :patch} %>
-              </div>
             </div>
-
           </div>
-          <% end %>
 
-          <% end %>
+          <div class="col-xs-6 col-md-6">
+            <div class="flex-container-centered-v list-row-130">
+              <div>
+                <strong><%= loan.book.title %></strong>
+                <em><%= loan.book.author %></em>
+
+                <div class="padded-top-2em">
+                  Requested on <%= loan.approved_on.strftime('%d/%m/%Y') %>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-md-4">
+            <div class="flex-container-centered-vh list-row-130">
+              <%= link_to "Return", "#", {class: "btn btn-primary btn-half-width", :method => :patch} %>
+            </div>
+          </div>
+
+        </div>
+        <% end %>
+
+        <% end %>
 
 
+      </div>
     </div>
   </div>
 </div>
