--- a/app/assets/stylesheets/components/_lists.scss
+++ b/app/assets/stylesheets/components/_lists.scss
@@ -1,6 +1,6 @@
 .list-row-library {
   min-height: 130px;
-  height: 100%;
+  // height: 100
 }
 
 .loan-requester {
@@ -11,11 +11,13 @@
 }
 
 .list-row-130 {
+  margin-top: 0px;
+  padding-top: 0px;
   height: 130px;
 }
 
 #library-page {
   h3 {
-    font: $primary;
+    color: $primary;
   }
 }
