switching to master to check things

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -32,7 +32,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-        <h3>John's Description</h3>
+        <h3>John says</h3>
         <div class="box-white">
           <%= @book.description %>
         </div>
