--- a/app/assets/stylesheets/components/_wrapper.scss
+++ b/app/assets/stylesheets/components/_wrapper.scss
@@ -15,6 +15,17 @@
 
 .wrapper-primary-light {
   background-color: $primary-light;
-  padding: 30px 0;
+  // padding: 30px 0;
 }
 
+.wrapper-primary-dark {
+  background-color: $primary-dark;
+}
+
+.wrapper-primary-dark {
+  background-color: $primary-light;
+}
+
+.wrapper-no-bottom-padding {
+  padding: 30 0 0 0;
+}
