--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -26,7 +26,7 @@
           <div class="col-xs-6 col-md-6">
             <div class="flex-container-centered-v list-row-130">
               <div>
-                <strong><%= loan.book.title %></strong>
+                <strong><%= loan.book.title %></strong> (<%= loan.book.language %>)
                 <em><%= loan.book.author %></em>
 
                 <div class="padded-top-2em">
