--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,20 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<div class="container text-center">
+<h2>Partage ton livre!</h2>
+</div>
+
+<div class="container">
+<%= simple_form_for(@book) do |f| %>
+  <%= f.error_notification %>
+  <%= f.label :title, 'Titre' %>
+  <%= f.input :title, label: false, placeholder:"Ex: La recherche du temps perdu" %>
+  <%= f.label :author, 'Auteur' %>
+  <%= f.input :author, label: false, placeholder:"Marcel Proust" %>
+  <%= f.label :my_description, 'Ma description' %>
+  <%= f.input :my_description, label: false, placeholder:"J'adore ce livre parce que..." %>
+  <%= f.label :isbn, 'Code ISBN' %>
+  <%= f.input :isbn, label: false, placeholder:"978-1-56619-909-4" %>
+
+  <%= f.button :submit %>
+<% end %>
+
+</div>
