--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -70,15 +70,19 @@
     <%= link_to t(".top_call_to_action", default: "Share a Book"), "#", class: "btn btn-primary btn-lg btn-navbar" %>
   </div>
 
+
   <!-- Dropdown list appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+      <% if user_signed_in? %>
         <li><%= link_to "My Loans", user_loans_path(current_user.id) %></li>
         <li><%= link_to "My Loan Requests", loan_requests_path(current_user.id) %></li>
+        <% end %>
       </ul>
     </div>
   </div>
 </div>
+
 
