--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -9,6 +9,8 @@
   <%= f.input :title, label: false, placeholder:"Ex: La recherche du temps perdu" %>
   <%= f.label :author, 'Auteur' %>
   <%= f.input :author, label: false, placeholder:"Marcel Proust" %>
+  <%= f.label :language, 'Langue' %>
+  <%= f.input :language, label: false, placeholder:"Fr", collection: Books::LANGUAGES %>
   <%= f.label :my_description, 'Ma description' %>
   <%= f.input :my_description, label: false, placeholder:"J'adore ce livre parce que..." %>
   <%= f.label :isbn, 'Code ISBN' %>
