--- a/app/assets/stylesheets/components/_wrapper.scss
+++ b/app/assets/stylesheets/components/_wrapper.scss
@@ -15,7 +15,7 @@
 
 .wrapper-primary-light {
   background-color: $primary-light;
-  // padding: 30px 0;
+  padding: 30px 0;
 }
 
 .wrapper-primary-dark {
