--- a/app/views/loans/open_requests.html.erb
+++ b/app/views/loans/open_requests.html.erb
@@ -41,10 +41,10 @@
 
                 <div class="col-xs-6 col-md-2">
                   <div class="flex-container-centered-vh list-row-130">
-                    <% profile_image_path = (User::PROFILES_PICS).sample %>
+                    <% profile_image_path = request.user.profile.profile_picture %>
                     <div class="loan-requester avatar-square-md", style="background-image: url(<%= image_path profile_image_path %>);">
                       <div class="profile-image-overlay text-center">
-                        <%= request.user.id %> wants this!
+                        <%= request.user.id - request.user.profile.profile_picture %> wants this!
                       </div>
                     </div>
 
@@ -94,9 +94,9 @@
                 <div class="col-xs-6 col-md-2">
                   <div class="flex-container-centered-vh list-row-130">
 
-                    <% profile_image_path = (User::PROFILES_PICS).sample %>
+                    <% profile_image_path = request.book.user.profile.profile_picture %>
                     <div class="loan-requester avatar-square-md", style="background-image: url(<%= image_path profile_image_path %>);">
-                      <div class="profile-image-overlay text-center"><%= request.book.user.id %> has this!</div>
+                      <div class="profile-image-overlay text-center"><%= request.book.user.id %> - <%= request.book.user.profile.first_name %> has this!</div>
                     </div>
 
                   </div>
