--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,6 +3,27 @@
 <% end %>
 
 
+
+<div id="wrapper">
+
+<!-- BOOK -->
+      <div class="book">
+        <div class="book-cover">
+          <h1 class="title"><%= @book.title %></h1>
+      <!--     <h2 class="subtitle">this is the Book Subitle</h2> -->
+          <h5 class="author"><span> écrit par</span> <%= @book.author %> </h5>
+        </div>
+        <div class="book-top"></div>
+        <div class="book-right"></div>
+      </div>
+      <!-- /BOOK -->
+
+</div>
+
+
+
+
+
 <div class="wrapper-primary-light">
   <div class="book-summary-holder">
 
