start of merging views

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,10 +1,9 @@
-.tab-xs-half {
-  width: 49%;
+.tab-xs-third {
+  width: 32%;
 }
 
-
 @media (min-width: 768px) {
-  .tab-xs-half {
+  .tab-xs-third {
     width: auto;
   }
 
