link for top tabs for track

--- a/app/views/shared/_toptabs.html.erb
+++ b/app/views/shared/_toptabs.html.erb
@@ -3,6 +3,6 @@
   <div class="tabs-ind"><%= link_to "Home", root_path, class: "tab active" %></div>
   <div class="tabs-ind"><%= link_to "Share", new_book_path, class: "tab active" %></div>
   <div class="tabs-ind"><%= link_to "Borrow", new_book_path, class: "tab" %></div>
-  <div class="tabs-ind"><%= link_to "Track", user_loans_path(current_user), class: "tab" %></div>
+  <div class="tabs-ind"><%= link_to "Track", loan_requests_path(current_user), class: "tab" %></div>
 
 </div>
